<package format="2">
  <name>qb_move</name>
  <version>3.0.0</version>
  <description>
    This package contains the ROS interface for qbrobotics® qbmove device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://github.com/qbrobotics/qb_move/issues</url>
  <url type="repository">https://github.com/qbrobotics/qb_move</url>
  <url type="website">http://www.qbrobotics.com/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>qb_move_control</exec_depend>
  <exec_depend>qb_move_description</exec_depend>
  <exec_depend>qb_move_hardware_interface</exec_depend>
  <exec_depend>qb_move_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>