<package format="2">
  <name>qb_move_control</name>
  <version>2.0.2</version>
  <description>
    This package contains the ROS control node for qbrobotics® qbmove device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbmove-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbmove-ros</url>
  <url type="website">http://wiki.ros.org/qb_move_control</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>