<package format="2">
  <name>qb_move_hardware_interface</name>
  <version>2.1.0</version>
  <description>
    This package contains the hardware interface for qbrobotics® qbmove device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbmove-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbmove-ros</url>
  <url type="website">http://wiki.ros.org/qb_move_hardware_interface</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>interactive_markers</depend>
  <depend>transmission_interface</depend>
  <depend>qb_device_hardware_interface</depend>

  <export>
    <hardware_interface plugin="${prefix}/plugin.xml"/>
  </export>

  <!--TODO: <test_depend>gtest</test_depend>-->
  <doc_depend>doxygen</doc_depend>
</package>